--- a/13-nlp/py/L13 N3 Text Classification.ipynb
+++ b/13-nlp/py/L13 N3 Text Classification.ipynb
@@ -240,7 +240,15 @@
     "* alpha=1e-3\n",
     "* n_iter=5\n",
     "\n",
+    "        SGDClassifier(loss='hinge', penalty='l2', alpha=1e-3, n_iter=5, random_state=42)\n",
+    "\n",
     "What's the accuracy on test data?\n",
+    "\n",
+    "Look at the classification report\n",
+    "\n",
+    "        from sklearn import metrics\n",
+    "        metrics.classification_report(twenty_test.target, predicted , target_names=twenty_test.target_names)\n",
+    "\n",
     "\n"
    ]
   },
