caravan test train

--- a/13-nlp/py/L13 N3 Text Classification.ipynb
+++ b/13-nlp/py/L13 N3 Text Classification.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -36,21 +36,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape of train dataset 2966\n"
+     ]
+    }
+   ],
    "source": [
     "categories = ['sci.space','comp.graphics', 'sci.med', 'rec.motorcycles', 'rec.sport.baseball']\n",
     "twenty_train = fetch_20newsgroups(subset='train',  categories=categories, shuffle=True, random_state=42)\n",
     "\n",
     "twenty_train.target_names\n",
-    "len(twenty_train.data)\n",
+    "\n",
     "\n",
     "# test data\n",
     "twenty_test = fetch_20newsgroups(subset='test',categories=categories, shuffle=True, random_state=42)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape of train dataset 2966\n",
+      "shape of test dataset 1974\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"From: rob@rjck.UUCP (Robert J.C. Kyanko)\\nSubject: Re: VGA 640x400 graphics mode\\nDistribution: world\\nOrganization: Neptune Software Inc\\nLines: 15\\n\\ngchen@essex.ecn.uoknor.edu writes in article <C55DoH.2AI@constellation.ecn.uoknor.edu>:\\n> \\n> Greetings!\\n> \\n> Does anybody know if it is possible to set VGA graphics mode to 640x400\\n> instead of 640x480?  Any info is appreciated!\\n\\nSome VESA bios's support this mode (0x100).  And *any* VGA should be able to\\nsupport this (640x480 by 256 colors) since it only requires 256,000 bytes.\\nMy 8514/a VESA TSR supports this; it's the only VESA mode by card can support\\ndue to 8514/a restrictions. (A WD/Paradise)\\n\\n--\\nI am not responsible for anything I do or say -- I'm just an opinion.\\n             Robert J.C. Kyanko (rob@rjck.UUCP)\\n\""
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"shape of train dataset %s\"% len(twenty_train.data) )\n",
+    "print(\"shape of test dataset %s\"% len(twenty_test.data) )\n"
    ]
   },
   {
@@ -122,19 +161,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Count words\n",
-    "# ...\n",
-    "# X_train_counts = \n",
     "\n",
+    "count_vect     = CountVectorizer(stop_words = 'english', max_features= 1000)\n",
+    "\n",
+    "X_train_counts = count_vect.fit_transform(twenty_train.data)\n",
+    "\n",
+    "# df= pd.DataFrame( data = X_train_counts.todense(), columns = count_vect.get_feature_names())\n",
+    "# df.head(n = 10)\n",
     "# Frequency tf-idf\n",
-    "# ...\n",
-    "# X_train_tfidf = \n"
+    "\n",
+    "tfidf_transformer = TfidfTransformer(use_idf=False)\n",
+    "\n",
+    "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
+    "\n",
+    "# X_train_tfidf\n",
+    "# df= pd.DataFrame( data = X_train_tfidf.todense(), columns = count_vect.get_feature_names())\n",
+    "# df.head(n = 10)"
    ]
   },
   {
@@ -157,16 +206,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Earth the final place  where no one has gone before' => sci.space\n",
+      "'OpenGL on the GPU is fast' => comp.graphics\n",
+      "'I bought my new GPU at the local shop ' => rec.motorcycles\n",
+      "'The common cold is widespread' => sci.med\n"
+     ]
+    }
+   ],
    "source": [
-    "# Fit the model on X_train_tfidf, twenty_train.target\n",
+    "\n",
+    "# first step: transform the new data\n",
+    "new_sentences = ['Earth the final place  where no one has gone before', \n",
+    "                         'OpenGL on the GPU is fast', \n",
+    "                         'I bought my new GPU at the local shop ', \n",
+    "                 'The common cold is widespread'\n",
+    "                        ]\n",
+    "X_new_counts = count_vect.transform(new_sentences)\n",
+    "X_new_tfidf = tfidf_transformer.transform(X_new_counts)\n",
+    "\n",
+    "# second step is to \n",
+    "#   1. fit the model on the training data\n",
+    "#   2. predict the categories of the new data\n",
+    "\n",
     "clf = MultinomialNB()\n",
     "\n",
-    "# ...\n"
+    "clf.fit(X_train_tfidf, twenty_train.target)\n",
+    "\n",
+    "predicted = clf.predict(X_new_tfidf)\n",
+    "\n",
+    "\n",
+    "for doc, category in zip(new_sentences, predicted):\n",
+    "    print('%r => %s' % (doc, twenty_train.target_names[category]))\n",
+    "# np.mean(predicted == twenty_test.target)\n",
+    "\n"
    ]
   },
   {
@@ -202,7 +283,7 @@
     "Let's build a pipeline with\n",
     "\n",
     "* CountVectorizer\n",
-    "* TfidfTransormer\n",
+    "* TfidfTransformer\n",
     "* MultinomialNB\n",
     "\n",
     "        from sklearn.pipeline import Pipeline\n",
@@ -220,12 +301,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.94680851063829785"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "text_clf = Pipeline([('vect', CountVectorizer(stop_words = 'english')),\n",
+    "             ('tfidf', TfidfTransformer(use_idf=True)),\n",
+    "             ('clf', MultinomialNB()),\n",
+    "])\n",
+    "\n",
+    "text_clf.fit(twenty_train.data, twenty_train.target)\n",
+    "\n",
+    "predicted = text_clf.predict(twenty_test.data)\n",
+    "\n",
+    "predicted == twenty_test.target\n",
+    "np.mean(predicted == twenty_test.target)"
+   ]
   },
   {
    "cell_type": "markdown",
