--- a/16_time_series/py/Smoothing and Forecast 101.ipynb
+++ b/16_time_series/py/Smoothing and Forecast 101.ipynb
@@ -138,27 +138,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/aperrier/anaconda/envs/py35/lib/python3.5/site-packages/ipykernel/__main__.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  from ipykernel import kernelapp as app\n"
-     ]
-    }
-   ],
-   "source": [
-    "ts['simple'] = None\n",
-    "ts.simple[1:ts.shape[0]] = ts.rings[0:ts.shape[0]-1]\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -409,6 +394,15 @@
     "\n",
     "What Ts is the most / least stationnary?\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
