--- a/19_recap/py/End of Course Friendly Challenge.ipynb
+++ b/19_recap/py/End of Course Friendly Challenge.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# End of Class Friendly Competition\n",
+    "# End of Class Friendly Challenge\n",
     "\n",
     "In this session we will make predictions on the Boston housing dataset to review the major concepts and models we've learned in this course.\n",
     "\n",
