--- a/19_recap/py/End of Course Friendly Challenge.ipynb
+++ b/19_recap/py/End of Course Friendly Challenge.ipynb
@@ -43,7 +43,9 @@
     "* Learning curves\n",
     "* Dimensionality reduction with PCA\n",
     "\n",
-    "Don't forget to fit your transformations on the training and apply them on the test set (do not fit the transformation on the test set)\n"
+    "Don't forget to fit your transformations on the training and apply them on the test set (do not fit the transformation on the test set)\n",
+    "\n",
+    "**Important**: The test set is there for the final score. It should not be used to optimize the model. Use cross validation for that.\n"
    ]
   },
   {
@@ -61,19 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Baseline score (Random Forest) to beat is: 9.74 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -124,21 +118,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
