--- a/19_recap/py/End of Course Friendly Challenge.ipynb
+++ b/19_recap/py/End of Course Friendly Challenge.ipynb
@@ -63,11 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline score (Random Forest) to beat is: 9.65 \n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
